--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
-  <string name="app_name">Assignment5</string>
+  <string name="app_name">Assignment4</string>
+  <string name="username_hint">Username</string>
+  <string name="password_hint">Password</string>
+  <string name="login_button_text">Login</string>
+  <string name="invalid_credentials_msg">Invalid username/password. Please try again.</string>
+  <string name="product_type_img_description">product type</string>
+  <string name="product_price_text">$%1$.2f</string>
+  <string name="products_error_text">An error has occurred.</string>
+  <string name="server_no_products_text">No products available.</string>
+  <string name="offline_no_products_text">No data available. (The device is offline, and no data has
+    been cached.)</string>
 </resources>
