Create Compose layout for login screen
Login functionality has not been re-added yet

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
-  <string name="app_name">Assignment4</string>
-  <string name="username_hint">Username</string>
-  <string name="password_hint">Password</string>
+  <string name="app_name">Assignment5</string>
+  <string name="username_text_field_label">Username</string>
+  <string name="password_text_field_label">Password</string>
   <string name="login_button_text">Login</string>
   <string name="invalid_credentials_msg">Invalid username/password. Please try again.</string>
   <string name="product_type_img_description">product type</string>
